crates/diffler/src/ui/diff/snapshots/diffler__ui__diff__sidebar__tests__kinds_layout_sidebar_groups_files_by_what_they_are.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ Source (1)             +1 -1  new file  ci.yml                                                            +1 -0 █████"
"   ● src/lib.rs           +1 -1  @@ -0,0 +1,1 @@                                                                        "
" ▾ Docs (1)               +1 -0 ▌        1 on: push                                                                     "
"   ○ todo.md              +1 -0                                                                                         "
" ▾ Config (1)             +1 -0                                                                                         "
"▌  + ci.yml               +1 -0                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
