crates/diffler/src/ui/diff/snapshots/diffler__ui__diff__sidebar__tests__review_layout_sidebar_buckets_viewed_files.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ To review (2)          +2 -1  modified  src/lib.rs                                                        +1 -1 █████"
"▌  ● src/lib.rs           +1 -1  answer                                                                                 "
"   ○ todo.md              +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ▸ Viewed (1)             +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                                                       "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 1/3 files                                                                        "
